--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
                     <div class="contenedor">
                         <div class="cajafichas3m">3M<br><br>
                             <div id="cajafichas3m2">
-                                </a>
                                 <li><a href="https://drive.google.com/file/d/11eMi2kUY4_U38BCK12oX1UsXmaCGqUaA/view?usp=sharing">Macarilla N95 8210</li></a>
                             </div><br>
                             <div id="cajafichas3m3">
-                                </a>
                                 <li><a href="https://drive.google.com/file/d/1OBFA0yekBmIaYNz4IqRgMQtYHOiTyRxm/view?usp=sharing">Macarilla N95 8511</li></a>
                             </div>
                         </div>
@@ -49,7 +47,10 @@
                     <div class="contenedor1">
                         <div class="cajafichaslore">Lorenzetti<br><br>
                             <div id="cajafichaslore2">
-                                <li></li>
+                                <li><a href="https://drive.google.com/file/d/1QcA7qi-X3HB5hKiqEUgsaNxT0rz86TLO/view?usp=sharing">Garantía Lorenzetti</a></li>
+                            </div><br>
+                            <div id="cajafichaslore3">
+                                <li><a href="https://drive.google.com/file/d/1TWc519AuIefX6wZxgy-XQkctszst8snr/view?usp=sharing">Instalacion Orinal</a></li>
                             </div>
                         </div>
                         <hr>
@@ -410,7 +411,8 @@
         </div>
         <div class="meguiars">
             <div id="meguiarscatalogo">
-                <li><a href="https://drive.google.com/file/d/1OSKKYFxuklubsPi8B7msrreQDYUQ2OUO/view?usp=sharing"> Catálogo Meguiars</a></li>
+                <li><a href="https://drive.google.com/file/d/1OSKKYFxuklubsPi8B7msrreQDYUQ2OUO/view?usp=sharing"> Catálogo Meguiars</a></li><br>
+                <li><a href="https://drive.google.com/file/d/1CpLoVcx7l_V4DoKZD8RJ8ZbY3AL7lFBZ/view?usp=sharing"> Combos Meguiars</a></li>
             </div>
             <div class="imagen"><img src="CATALOGOS/meguiars.jpg">
             </div>
