--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <li><a href="https://drive.google.com/file/d/1QcA7qi-X3HB5hKiqEUgsaNxT0rz86TLO/view?usp=sharing">Garantía Lorenzetti</a></li>
                             </div><br>
                             <div id="cajafichaslore3">
-                                <li><a href="https://drive.google.com/file/d/1TWc519AuIefX6wZxgy-XQkctszst8snr/view?usp=sharing">Instalacion Orinal</a></li>
+                                <li><a href="https://drive.google.com/file/d/1TWc519AuIefX6wZxgy-XQkctszst8snr/view?usp=sharing">Instalación Orinal</a></li>
                             </div>
                         </div>
                         <hr>
