--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div id="promocatalogo">
                     <li><a href="https://drive.google.com/file/d/1FYDCY_PThak14_ixK21VyIYcRwrsT1X7/view?usp=sharing"> Promociones Mensuales</a></li>
                 </div>
-                <div class="imagen"><img src="CATALOGOS/promo_mensual.png">
+                <div class="imagen"><img src="CATALOGOS/promo_mensual.PNG">
                 </div>
             </div>
         </div>
