--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="col s12 m6 l6 ">
                 <div class="card small ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="250px " height="200px " src="CATALOGOS/promo_mensual.PNG">
+                        <img class="activator " width="250px " height="200px " src="img_catalogo/promo_mensual.PNG">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Promociones<i class="material-icons right ">more_vert</i></span>
