--- a/index.html
+++ b/index.html
@@ -631,121 +631,122 @@
             </div>
         </div>
     </div>
-    <!--<div class="fixed-action-btn">
-        <a class="btn-floating btn-large red">
-            <i class="large material-icons">mode_edit</i>
-        </a>
-        <ul>
-            <div class="boton">
-                <li><a class="btn-floating red "><i class="material-icons ">insert_chart</i></a></li>
-                <div class="submenu">
-                    <div class="fondo">
-                        <div class="redes">POP REDES SOCIALES
-                            <div id="rrss"><b></b>
-                                <hr><br><br>
-                                <hr>
-                                <li><a href="https://drive.google.com/drive/folders/1e3XSFN8f66onAwfiF18LyQiX4gdal5AD?usp=sharing"> Lorenzetti</a></li>
+    <!-- Modal Trigger -->
+    <a class="waves-effect waves-light btn modal-trigger" href="#modal1"><i class="large material-icons">mode_edit</i></button></a>
+
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <h4>Información Adicional</h4>
+            <div class="submenu">
+                <div class="fondo">
+                    <div class="redes">POP REDES SOCIALES
+                        <div id="rrss"><b></b>
+                            <hr><br><br>
+                            <hr>
+                            <li><a href="https://drive.google.com/drive/folders/1e3XSFN8f66onAwfiF18LyQiX4gdal5AD?usp=sharing"> Lorenzetti</a></li>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="fichas">FICHAS TÉCNICAS
+                        <div class="ftecnicas">
+                            <b></b>
+                            <hr><br><br>
+                            <hr>
+                            <div class="contenedor">
+                                <div class="cajafichas3m">3M<br><br>
+                                    <div id="cajafichas3m2">
+                                        <li><a href="https://drive.google.com/file/d/11eMi2kUY4_U38BCK12oX1UsXmaCGqUaA/view?usp=sharing">Macarilla N95 8210</li></a>
+                                    </div><br>
+                                    <div id="cajafichas3m3">
+                                        <li><a href="https://drive.google.com/file/d/1OBFA0yekBmIaYNz4IqRgMQtYHOiTyRxm/view?usp=sharing">Macarilla N95 8511</li></a>
+                                    </div>
+                                </div>
                                 <hr>
                             </div>
-                        </div>
-                        <div class="fichas">FICHAS TÉCNICAS
-                            <div class="ftecnicas">
-                                <b></b>
-                                <hr><br><br>
+                            <div class="contenedor1">
+                                <div class="cajafichaslore">Lorenzetti<br><br>
+                                    <div id="cajafichaslore2">
+                                        <li><a href="https://drive.google.com/file/d/1QcA7qi-X3HB5hKiqEUgsaNxT0rz86TLO/view?usp=sharing">Garantía Lorenzetti</a></li>
+                                    </div><br>
+                                    <div id="cajafichaslore3">
+                                        <li><a href="https://drive.google.com/file/d/1TWc519AuIefX6wZxgy-XQkctszst8snr/view?usp=sharing">Instalación Orinal</a></li>
+                                    </div>
+                                </div>
                                 <hr>
-                                <div class="contenedor">
-                                    <div class="cajafichas3m">3M<br><br>
-                                        <div id="cajafichas3m2">
-                                            <li><a href="https://drive.google.com/file/d/11eMi2kUY4_U38BCK12oX1UsXmaCGqUaA/view?usp=sharing">Macarilla N95 8210</li></a>
-                                        </div><br>
-                                        <div id="cajafichas3m3">
-                                            <li><a href="https://drive.google.com/file/d/1OBFA0yekBmIaYNz4IqRgMQtYHOiTyRxm/view?usp=sharing">Macarilla N95 8511</li></a>
-                                        </div>
-                                    </div>
-                                    <hr>
+                            </div>
+                            <div class="contenedor2">
+                                <div class="cajafichasbticino">Bticino<br><br>
+                                    <div id="cajafichasbticino2">
+                                        <li><a href="https://drive.google.com/file/d/1Oe0v_8jyiSWNNrddKnluqPYWK-LvRgjj/view?usp=sharing">Gabinete ON-Q</li></a>
+                                    </div><br>
                                 </div>
-                                <div class="contenedor1">
-                                    <div class="cajafichaslore">Lorenzetti<br><br>
-                                        <div id="cajafichaslore2">
-                                            <li><a href="https://drive.google.com/file/d/1QcA7qi-X3HB5hKiqEUgsaNxT0rz86TLO/view?usp=sharing">Garantía Lorenzetti</a></li>
-                                        </div><br>
-                                        <div id="cajafichaslore3">
-                                            <li><a href="https://drive.google.com/file/d/1TWc519AuIefX6wZxgy-XQkctszst8snr/view?usp=sharing">Instalación Orinal</a></li>
-                                        </div>
+                                <hr>
+                            </div>
+                            <div class="contenedor3">
+                                <div class="cajafichaseagle">Aguila<br><br>
+                                    <div id="cajafichaseagle2">
+                                        <a href="https://drive.google.com/file/d/1OvDWKRsXZ7V-40_4oLu5SbrfnSHK-cHN/view?usp=sharing">
+                                            <li>Control de Avanico 8040</li>
+                                        </a>
                                     </div>
-                                    <hr>
                                 </div>
-                                <div class="contenedor2">
-                                    <div class="cajafichasbticino">Bticino<br><br>
-                                        <div id="cajafichasbticino2">
-                                            <li><a href="https://drive.google.com/file/d/1Oe0v_8jyiSWNNrddKnluqPYWK-LvRgjj/view?usp=sharing">Gabinete ON-Q</li></a>
-                                        </div><br>
+                                <hr>
+                            </div>
+                            <div class="contenedor4">
+                                <div class="cajafichashenkel">Henkel<br><br>
+                                    <div id="cajafichashenkel2">
+                                        <a href="https://drive.google.com/file/d/1Oj7OvcYkE-MScH-JDSjvUrabHLpS7Gh7/view?usp=sharing">
+                                            <li>Espuma Expansiva</li>
+                                        </a>
+                                    </div><br>
+                                    <div id="cajafichashenkel3">
+                                        <a href="https://drive.google.com/file/d/1P0UNDhIQWQY9RJRT1Rt4oCbT3AVYRBuZ/view?usp=sharing">
+                                            <li>Sellador FT101</li>
+                                        </a>
                                     </div>
-                                    <hr>
                                 </div>
-                                <div class="contenedor3">
-                                    <div class="cajafichaseagle">Aguila<br><br>
-                                        <div id="cajafichaseagle2">
-                                            <a href="https://drive.google.com/file/d/1OvDWKRsXZ7V-40_4oLu5SbrfnSHK-cHN/view?usp=sharing">
-                                                <li>Control de Avanico 8040</li>
-                                            </a>
-                                        </div>
+                                <hr>
+                            </div>
+                            <div class="contenedor5">
+                                <div class="cajafichasmet">Metalco<br><br>
+                                    <div id="cajafichasmet2">
+                                        <a href="https://drive.google.com/file/d/1OOWBeaMuE8gZtwvdnpTFjN9zR_s5MNVQ/view?usp=sharing">
+                                            <li>Lamina Lisa</li>
+                                        </a>
                                     </div>
-                                    <hr>
                                 </div>
-                                <div class="contenedor4">
-                                    <div class="cajafichashenkel">Henkel<br><br>
-                                        <div id="cajafichashenkel2">
-                                            <a href="https://drive.google.com/file/d/1Oj7OvcYkE-MScH-JDSjvUrabHLpS7Gh7/view?usp=sharing">
-                                                <li>Espuma Expansiva</li>
-                                            </a>
-                                        </div><br>
-                                        <div id="cajafichashenkel3">
-                                            <a href="https://drive.google.com/file/d/1P0UNDhIQWQY9RJRT1Rt4oCbT3AVYRBuZ/view?usp=sharing">
-                                                <li>Sellador FT101</li>
-                                            </a>
-                                        </div>
+                                <hr>
+                            </div>
+                            <div class="contenedor6">
+                                <div class="cajafichaspfister">Pfister<br><br>
+                                    <div id="cajafichaspfister2">
+                                        <a href="https://drive.google.com/file/d/1ORuJEoo04JrjeWfmZQjOBkGKZdI-sEmo/view?usp=sharing">
+                                            <li>llave 013CSLC</li>
+                                        </a>
                                     </div>
-                                    <hr>
                                 </div>
-                                <div class="contenedor5">
-                                    <div class="cajafichasmet">Metalco<br><br>
-                                        <div id="cajafichasmet2">
-                                            <a href="https://drive.google.com/file/d/1OOWBeaMuE8gZtwvdnpTFjN9zR_s5MNVQ/view?usp=sharing">
-                                                <li>Lamina Lisa</li>
-                                            </a>
-                                        </div>
+                                <hr>
+                            </div>
+                            <div class="contenedor7">
+                                <div class="cajafichassur">Sur Química<br><br>
+                                    <div id="cajafichassur2">
+                                        <a href="https://drive.google.com/file/d/1OlTXmAquR5I0QQgvtivJY5OCmAoikvmb/view?usp=sharing">
+                                            <li>Minio Corrostop 2310</li>
+                                        </a>
                                     </div>
-                                    <hr>
                                 </div>
-                                <div class="contenedor6">
-                                    <div class="cajafichaspfister">Pfister<br><br>
-                                        <div id="cajafichaspfister2">
-                                            <a href="https://drive.google.com/file/d/1ORuJEoo04JrjeWfmZQjOBkGKZdI-sEmo/view?usp=sharing">
-                                                <li>llave 013CSLC</li>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                </div>
-                                <div class="contenedor7">
-                                    <div class="cajafichassur">Sur Química<br><br>
-                                        <div id="cajafichassur2">
-                                            <a href="https://drive.google.com/file/d/1OlTXmAquR5I0QQgvtivJY5OCmAoikvmb/view?usp=sharing">
-                                                <li>Minio Corrostop 2310</li>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                </div>
+                                <hr>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </ul>
-    </div>-->
-
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cerrar</a>
+        </div>
+    </div>
     <footer class="grey darken-4">
         <div class="font white">
             <p> © 2022 Juan C. Mena </p>
