--- a/index.html
+++ b/index.html
@@ -632,12 +632,12 @@
         </div>
     </div>
     <!-- Modal Trigger -->
-    <a class="waves-effect waves-light btn modal-trigger" href="#modal1"><i class="large material-icons">mode_edit</i></button></a>
+    <a class="waves-effect waves-light btn-floating btn-large red modal-trigger" href="#modal1"><i class="large material-icons">mode_edit</i></button></a>
 
     <!-- Modal Structure -->
     <div id="modal1" class="modal">
-        <div class="modal-content">
-            <h4>Información Adicional</h4>
+        <div class="modal-content center">
+            <h4>Opciones</h4>
             <div class="submenu">
                 <div class="fondo">
                     <div class="redes">POP REDES SOCIALES
