--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
         </div>
     </div>
     <!-- Modal Trigger -->
-    <a class="waves-effect waves-light btn-floating btn-large red modal-trigger" href="#modal1"><i class="large material-icons">mode_edit</i></button></a>
+    <a class="waves-effect waves-light btn-floating btn-large red modal-trigger" href="#modal1"><i class="large material-icons">add</i></button></a>
 
     <!-- Modal Structure -->
     <div id="modal1" class="modal">
