--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <span class="card-title activator grey-text text-darken-4 ">Aguila<i class="material-icons right ">more_vert</i></span>
                     </div>
                     <div class="card-reveal ">
-                        <span class="card-title grey-text text-darken-4 ">Aguila<i class="material-icons right ">close</i></span>
+                        <span class="card-title grey-text text-darken-4 ">Eagle<i class="material-icons right ">close</i></span>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1BfQz7M0hYKqECfUvAxsAR60OLGzKrJ8u/view?usp=sharing "> Catálogo Aguila</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1-tMfgLjqQHQmocyDWjNMpmO0DzjHTE12/view?usp=sharing "> Catálogo Decor</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1-kWkA_kfV_UVuHep9RR1SrVyEFaeyRL3/view?usp=sharing "> Catálogo T&J</a></li>
