--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <img class="activator " width="150px " height="150px " src="img_catalogo/aguila.png ">
                     </div>
                     <div class="card-content ">
-                        <span class="card-title activator grey-text text-darken-4 ">Aguila<i class="material-icons right ">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4 ">Eagle<i class="material-icons right ">more_vert</i></span>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Eagle<i class="material-icons right ">close</i></span>
