actualizacion catalogo bosch

--- a/index.html
+++ b/index.html
@@ -380,6 +380,8 @@
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bosch<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1B6mDhhlmAZZ6232n4bG-hEW5rW5ruPl2/view?usp=sharing"> Surtido Bosch Marzo</a></li><br>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/18TPhXqpMgrvORWYGp6XpZPQZLDExvCWz/view?usp=sharing"> Surtido Skil Marzo</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/115p_NnTUlO6LEtZ0jBt7sBgUFLwa2FK5/view?usp=sharing "> Catálogo Medidores Laser Bosch</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/11-zFjoG_9UIcLEmo-1A60vno13IPcGHo/view?usp=sharing "> Catálogo Accesorios Bosch</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1ZIra3pTIKlVOyS0EupgOPW_YQQSdNT1C/view?usp=sharing "> Catálogo Brocas Completo</a></li><br>
