--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <div class="col s12 m6 l6 ">
                 <div class="card small ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="250px " height="200px " src="img_catalogo/voniko.jpg ">
+                        <img class="activator " width="250px " height="200px " src="img_catalogo/rca.png ">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Producto Nuevo<i class="material-icons right ">more_vert</i></span>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Producto Nuevo<i class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" href="https://drive.google.com/file/d/14TkWP8rfzraTsHP-AzilNUiAGL55ay-b/view?usp=sharing "> Catálogo Voniko</a></li>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1KH2ZDd7ctuPJOtAJAs-bBB8qRaDWm2yH/view?usp=sharing">Bombillos RCA</a></li>
                     </div>
                 </div>
             </div>
@@ -484,6 +484,20 @@
             <div class="col s12 m6 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/voniko.jpg ">
+                    </div>
+                    <div class="card-content ">
+                        <span class="card-title activator grey-text text-darken-4 ">Baterías Voniko<i class="material-icons right ">more_vert</i></span>
+                    </div>
+                    <div class="card-reveal ">
+                        <span class="card-title grey-text text-darken-4 ">Voniko<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1Z_elOjFMDWplhZdeoPjKtWHt4DOoZ0BC/view?usp=sharing "> Catálogo Baterías Voniko</a></li>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4 xl3 ">
+                <div class="card ">
+                    <div class="card-image waves-effect waves-block waves-light ">
                         <img class="activator " width="150px " height="150px " src="img_catalogo/eterna.jpg ">
                     </div>
                     <div class="card-content ">
@@ -506,6 +520,7 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Rimax<i class="material-icons right ">close</i></span>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1sSBJCJKhSWtkr2W-onxxhzmBK3xgwnYL/view?usp=sharing "> Catálogo Rimax</a></li>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1jcDhPgGGDPC5HYi_cRwQtGmW3QSWRkJZ/view?usp=sharing "> Catálogo  Reducido Rimax</a></li>
                     </div>
                 </div>
             </div>
