--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="col s12 m6 l6 ">
                 <div class="card small ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="250px " height="200px " src="img_catalogo/rca.png ">
+                        <img class="activator " width="250px " height="200px " src="img_catalogo/producto nuevo.png ">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Producto Nuevo<i class="material-icons right ">more_vert</i></span>
@@ -53,6 +53,8 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Producto Nuevo<i class="material-icons right ">close</i></span>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1KH2ZDd7ctuPJOtAJAs-bBB8qRaDWm2yH/view?usp=sharing">Bombillos RCA</a></li>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1kxE1p9tTQ34oYJB0Te5uOk9h21LDe59p/view?usp=sharing">Encendedores</a></li>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1jO6NSh_o8o1FKLE3elxuNFTu0ULdaraH/view?usp=sharing">Ratoneras</a></li>
                     </div>
                 </div>
             </div>
