--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="col s12 m6 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="150px " height="150px " src="img_catalogo/bl.jpg ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/basic.jpeg ">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Basic Living<i class="material-icons right ">more_vert</i></span>
