--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Lorenzetti<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Duchas, calentadores, resistencias.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Lorenzetti<i class="material-icons right ">close</i></span>
@@ -85,10 +86,11 @@
             <div class="col s12 m6 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="150px " height="150px " src="img_catalogo/3m.png ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/3m1.png ">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">3M<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Adeshivos, cintas, conectores, lijas, etc.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">3M<i class="material-icons right ">close</i></span>
@@ -105,6 +107,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Eagle<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Acc eléctricos, línea ferretera habitacional.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Eagle<i class="material-icons right ">close</i></span>
@@ -121,6 +124,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Bticino<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Acc eléctricos, Recidenciales/comerciales.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bticino<i class="material-icons right ">close</i></span>
@@ -139,6 +143,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Avtek<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Supresores, protectores, reg voltaje, fuentes de poder.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Avtek<i class="material-icons right ">close</i></span>
