--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Segurimax<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Lámparas de emergencia.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Segurimax<i class="material-icons right ">close</i></span>
@@ -172,6 +173,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Square D<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Centros de carga, breaker, supresores.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Square D<i class="material-icons right ">close</i></span>
@@ -190,6 +192,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Conducen<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Conductores eléctricos.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Conducen<i class="material-icons right ">close</i></span>
@@ -204,6 +207,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Coflex<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Productos sanitarios, cocina, lavandería, baños.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Coflex<i class="material-icons right ">close</i></span>
@@ -220,6 +224,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Aqua Nuova<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Inodoros, lavamanos, acc de baño, espejos, grifería, etc.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Aqua Nuova<i class="material-icons right ">close</i></span>
