--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">3M<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Adeshivos, cintas, conectores, lijas, etc.</a></p>
+                        <p><a>Adhesivos, cintas, conectores, lijas, etc.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">3M<i class="material-icons right ">close</i></span>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Bticino<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Acc eléctricos, Recidenciales/comerciales.</a></p>
+                        <p><a>Accesorios eléctricos, Recidenciales/comerciales.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bticino<i class="material-icons right ">close</i></span>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Avtek<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Supresores, protectores, reg voltaje, fuentes de poder.</a></p>
+                        <p><a>Supresores, protectores, reguladores de voltaje, fuentes de poder.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Avtek<i class="material-icons right ">close</i></span>
@@ -158,7 +158,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Segurimax<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Lámparas de emergencia.</a></p>
+                        <p><a>Lámparas de emergencia.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Segurimax<i class="material-icons right ">close</i></span>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Square D<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Centros de carga, breaker, supresores.</a></p>
+                        <p><a>Centros de carga, breaker, supresores.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Square D<i class="material-icons right ">close</i></span>
@@ -192,7 +192,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Conducen<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Conductores eléctricos.</a></p>
+                        <p><a>Conductores eléctricos, cobre y aluminio.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Conducen<i class="material-icons right ">close</i></span>
@@ -224,7 +224,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Aqua Nuova<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Inodoros, lavamanos, acc de baño, espejos, grifería, etc.</a></p>
+                        <p><a>Inodoros, lavamanos, accesorios de baño, espejos, grifería, etc.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Aqua Nuova<i class="material-icons right ">close</i></span>
@@ -242,6 +242,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Bruder<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Inodoro, lavamanos, accesorios para inodoro.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bruder<i class="material-icons right ">close</i></span>
@@ -257,6 +258,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Cato<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Inodoro, lavamanos.</a><br><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Cato<i class="material-icons right ">close</i></span>
@@ -271,6 +273,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Fermetal<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Fregaderos, grifería, accesorios para baño y fontanería.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Fermetal<i class="material-icons right ">close</i></span>
@@ -285,6 +288,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Pfister<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Grifería, cuerpos de ducha, cacheras, acc de baño.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Pfister<i class="material-icons right ">close</i></span>
@@ -299,6 +303,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Metales Aleados<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Grifería y repuestos.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Metales Aleados<i class="material-icons right ">close</i></span>
@@ -313,6 +318,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Basic Living<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Muebles de baño, Mangueras expandibles, soportes tv, navidad.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Basic Living<i class="material-icons right ">close</i></span>
@@ -330,6 +336,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Dimartino<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Atomizadores, bombas de riego.</a><br><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Dimartino<i class="material-icons right ">close</i></span>
@@ -344,6 +351,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Imacasa<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Herramienta agrícola y jardinería.</a><br><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Imacasa<i class="material-icons right ">close</i></span>
@@ -358,6 +366,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Henkel/Loctite<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Selladores, silicones, Pegamentos, tapagoteras.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Henkel/Loctite</span><i class="material-icons right ">close</i></span>
@@ -373,6 +382,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">stanley<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Herramienta manual.</a><br><br><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Stanley<i class="material-icons right ">close</i></span>
@@ -389,6 +399,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Bosch<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Herramienta eléctrica, brocas, discos, abrasivos, medición láser.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bosch<i class="material-icons right ">close</i></span>
@@ -411,6 +422,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Campbell<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Compresores, accesorios, repuestos.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Campbell<i class="material-icons right ">close</i></span>
@@ -426,6 +438,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Maute<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Inversores, mascaras de soldar.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Maute<i class="material-icons right ">close</i></span>
@@ -441,6 +454,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Sur Química<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Morteros, pintura, adhesivos, automotriz.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Sur Química<i class="material-icons right ">close</i></span>
@@ -458,6 +472,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Fanal<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Cerraduras, candados.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Fanal<i class="material-icons right ">close</i></span>
@@ -472,6 +487,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Werner<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Escaleras.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Werner<i class="material-icons right ">close</i></span>
@@ -486,6 +502,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Vacmaster<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Aspiradoras y accesorios.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Vacmaster<i class="material-icons right ">close</i></span>
@@ -500,6 +517,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Baterías Voniko<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Baterías.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Voniko<i class="material-icons right ">close</i></span>
@@ -514,6 +532,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Eterna<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Escobas, cepillos, escobones.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Eterna<i class="material-icons right ">close</i></span>
@@ -528,6 +547,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Rimax<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Armarios, organización, basureros, casas para mascotas.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Rimax<i class="material-icons right ">close</i></span>
@@ -543,6 +563,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Adarga<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Ácido muriático, potasa, citronella, aceite, cloro, desatorador.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Adarga<i class="material-icons right ">close</i></span>
@@ -557,6 +578,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Solquisa<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Cuerdas, anzuelos, plomadas.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Solquisa<i class="material-icons right ">close</i></span>
@@ -574,6 +596,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Bicicletas Rali<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Bicicletas, repuestos y accesorios.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bicicletas Rali<i class="material-icons right ">close</i></span>
@@ -589,6 +612,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Meguiars<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Cuidado automotriz.</a><br><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Meguiars<i class="material-icons right ">close</i></span>
@@ -604,6 +628,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Repsol<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Lubricantes, desengrasantes, coolant.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Repsol<i class="material-icons right ">close</i></span>
@@ -618,6 +643,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Flexi Space<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Puertas plegables, aleros.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Flexi Space<i class="material-icons right ">close</i></span>
