actualizacion de catalogos

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             <div class="col s12 m6 l6 ">
                 <div class="card small ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="250px " height="200px " src="img_catalogo/promocion mensual.PNG">
+                        <img class="activator " width="250px " height="200px " src="img_catalogo/Capture.PNG">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Promociones<i class="material-icons right ">more_vert</i></span>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1e3NQpE7LXIQQW9unmhRI4h2AkngIx7V4/view?usp=sharing"> Promociones Mensuales</a></li>
+                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1WItsOpxQEXuJicera5cwMWsv7z9Zv4SK/view?usp=sharing"> Promociones Mensuales</a></li>
                     </div>
                 </div>
             </div>
@@ -52,6 +52,8 @@
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Producto Nuevo<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/11fyKQA1qkcxGErO8oVJyLzRN0zbjz_PD/view?usp=sharing">Brochas Roma</a></li>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1zuy-aIF3sYG_tjVh8gHvpjJ02prS63re/view?usp=sharing">Cintas Knight</a></li>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1KH2ZDd7ctuPJOtAJAs-bBB8qRaDWm2yH/view?usp=sharing">Bombillos RCA</a></li>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1kxE1p9tTQ34oYJB0Te5uOk9h21LDe59p/view?usp=sharing">Encendedores</a></li>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1jO6NSh_o8o1FKLE3elxuNFTu0ULdaraH/view?usp=sharing">Ratoneras</a></li>
@@ -129,6 +131,7 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bticino<i class="material-icons right ">close</i></span>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1SQLY0KvsqRo7nfrY3HxkXiHa1ma9lgo_/view?usp=sharing "> Catálogo Bticino</a></li><br>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1gT4sQsT6YE3QPdWjTH2I8NEN-jpVmjRK/view?usp=sharing"> Catálogo Luzica</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1-5KUF8jxipWr8ZhUtj1vtLIu_xix34Zm/view?usp=sharing "> Catálogo Nobile</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1N7ActlewyFH215lYPCmYCHjBEr8Psvaw/view?usp=sharing "> Catálogo Modus Style</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1eUmntXP3VtDYoPNGF-HE11KSyLS0R9OR/view?usp=sharing "> Catálogo Living Now</a></li><br>
@@ -388,6 +391,7 @@
                         <span class="card-title grey-text text-darken-4 ">Stanley<i class="material-icons right ">close</i></span>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/19m0BG0Vxm_h-eg3odyyCYndEdjp6Hxu6/view?usp=sharing "> Catálogo Stanley</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1fxMC5bxe2dAsKougf2q6xmuIb3j2n2LE/view?usp=sharing "> Catálogo Candados</a></li>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1lHRLsmGLPNnF6doZhpFG5h5YRm3UI9B3/view?usp=sharing "> Catálogo National</a></li>
                     </div>
 
                 </div>
@@ -647,7 +651,7 @@
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Flexi Space<i class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" href="https://drive.google.com/file/d/1Z_elOjFMDWplhZdeoPjKtWHt4DOoZ0BC/view?usp=sharing "> Catálogo Flexi Space</a></li>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1xUKzaRoVu9ozttVTRjEHL95vWUymJDkL/view?usp=sharings"> Catálogo Flexi Space</a></li>
                     </div>
                 </div>
             </div>
