--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                         <span class="card-title grey-text text-darken-4 ">Producto Nuevo<i class="material-icons right ">close</i></span>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/11fyKQA1qkcxGErO8oVJyLzRN0zbjz_PD/view?usp=sharing">Brochas Roma</a></li>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1zuy-aIF3sYG_tjVh8gHvpjJ02prS63re/view?usp=sharing">Cintas Knight</a></li>
+                        <li><a class="flow-text" href="https://docs.google.com/spreadsheets/d/1Q58vvLzNeeF46qIq0IE5h86-8cOQhI6x/edit?usp=sharing&ouid=113384610071986709123&rtpof=true&sd=true">Cátalogo Amanco</a></li>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1KH2ZDd7ctuPJOtAJAs-bBB8qRaDWm2yH/view?usp=sharing">Bombillos RCA</a></li>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1kxE1p9tTQ34oYJB0Te5uOk9h21LDe59p/view?usp=sharing">Encendedores</a></li>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1jO6NSh_o8o1FKLE3elxuNFTu0ULdaraH/view?usp=sharing">Ratoneras</a></li>
