--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             <div class="col s12 m6 l6 ">
                 <div class="card small ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="250px " height="200px " src="img_catalogo/Capture.PNG">
+                        <img class="activator " width="250px " height="200px " src="img_catalogo/agosto.PNG">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Promociones<i class="material-icons right ">more_vert</i></span>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1WItsOpxQEXuJicera5cwMWsv7z9Zv4SK/view?usp=sharing"> Promociones Mensuales</a></li>
+                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1O7Yzw8LN_9O0SoDna7vydphti9li58y2/view?usp=sharing"> Promociones Mensuales</a></li>
                     </div>
                 </div>
             </div>
