--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class=" nav-wrapper  grey darken-4">
-                <a class="brand-logo center ">Cofersa</a>
+                <a class="brand-logo center ">COFERSA</a>
             </div>
         </nav>
     </div>
