--- a/index.html
+++ b/index.html
@@ -353,12 +353,12 @@
                         <img class="activator " width="150px " height="150px " src="img_catalogo/dimartino.png ">
                     </div>
                     <div class="card-content ">
-                        <span class="card-title activator grey-text text-darken-4 ">Dimartino<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Atomizadores, bombas de riego.</a><br><br><br></p>
+                        <span class="card-title activator grey-text text-darken-4 ">Suplijardines<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Semillas, Abonos, acc Jardinería, Atomizadores.</a><br><br><br></p>
                     </div>
                     <div class="card-reveal ">
-                        <span class="card-title grey-text text-darken-4 ">Dimartino<i class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" href="https://drive.google.com/file/d/1_SxD9pGFrDNfWNWwWZmTZ2rvFKuido-V/view?usp=sharing "> Catálogo Dimartino</a></li>
+                        <span class="card-title grey-text text-darken-4 ">Suplijardines<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1_HLY28DLnsM8XEg2ZUpyLbw04fdv_jjl/view?usp=sharing"> Catálogo Suplijardines</a></li>
                     </div>
                 </div>
             </div>
