--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             <div class="col s12 m8 offset-m2 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="150px " height="150px " src="img_catalogo/dimartino.png ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/suplijardines.png ">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Suplijardines<i class="material-icons right ">more_vert</i></span>
