--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Rimax<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Armarios, organización, basureros, casas para mascotas.</a></p>
+                        <p><a>Armarios, Organización, Basureros, Casas para Mascotas.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Rimax<i class="material-icons right ">close</i></span>
