--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Solquisa<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1aa-YtMdGv9EttsMOmgc5VVYreTPHiPNd/view?usp=sharing "> Soplete y Cocina</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/12FmfsI8rLiOQDuKgWDy5PpPKW6DFm0yu/view?usp=sharing "> Catálogo Plomadas</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/125LPPpyYX1L3axWl0HlzlX2rgZxxkpnV/view?usp=sharing "> Catálogo Anzuelos</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/11wjR61UDJL6etVTQcC17vI9SqHGuRGf4/view?usp=sharing "> Catálogo Araty</a></li><br>
